keyboard shortcut to generate sequence now only works if settings section is focused

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
 
-        <section id="settings-section" class="settings-section">
+        <section id="settings-section" class="settings-section" tabindex="0">
 
             <h2 class="-display-n">Settings</h2>
 
