sequence types can now be selected with keyboard shortcuts
The first letter is used for each type:

    Type                   | Shortcut key
    -----------------------|-------------
    Lowercase alphabetical | l
    Uppercase alphabetical | u
    Numerical characters   | n
    Special characters     | s

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
 
-        <section id="settings-section" class="settings-section" tabindex="0">
+        <section id="settings-section" class="settings-section">
 
             <h2 class="-display-n">Settings</h2>
 
@@ -79,6 +79,8 @@
             <div class="-pb-2 -align-c">
                 <div id="output"></div>
             </div>
+
+            <span id="focus-placeholder" tabindex="0"></span>
 
         </section>
 
