--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         title="Toggle to include/exclude lowercase alphabetical characters in the generated sequence"
                     ><span class="nts-switch"></span>Lowercase</label>
                 </div>
-                
+
                 <div class="sts-wrap">
                     <input name="sequence-type" type="checkbox"
                         id="sequence-type-uppercase" class="sequence-type-selector"
@@ -55,7 +55,7 @@
                         title="Toggle to include/exclude numerical characters in the generated sequence"
                     ><span class="nts-switch"></span>Numeric</label>
                 </div>
-                
+
                 <div class="sts-wrap">
                     <input name="sequence-type" type="checkbox"
                         id="sequence-type-special" class="sequence-type-selector"
@@ -68,12 +68,31 @@
             </div>
 
             <div class="-pb-2">
+
                 <label for="sequence-length" class="-mr-2">Select sequence length:</label>
-                <input type="number" id="sequence-length" value="8" min="1" max="512">
+
+                <input type="number" id="sequence-length" class="-mb-2" value="8" min="1" max="512">
+
+                <button id="s-length-sugg-16" class="s-length-sugg-btn"
+                    type="button" title="Set &quot;16&quot; as the sequence length"
+                >Use 16</button>
+
+                <button id="s-length-sugg-32" class="s-length-sugg-btn"
+                    type="button" title="Set &quot;32&quot; as the sequence length"
+                >Use 32</button>
+
+                <button id="s-length-sugg-64" class="s-length-sugg-btn"
+                    type="button" title="Set &quot;64&quot; as the sequence length"
+                >Use 64</button>
+
+                <button id="s-length-sugg-128" class="s-length-sugg-btn"
+                    type="button" title="Set &quot;128&quot; as the sequence length"
+                >Use 128</button>
+
             </div>
 
             <div class="-py-2 -align-c">
-                <button id="generate-btn" type="button">Generate</button>
+                <button id="generate-btn" class="generate-btn" type="button">Generate</button>
             </div>
 
             <div class="-pb-2 -align-c">
