--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <legend class="-mb-1">Select sequence type:</legend>
 
-                <div class="sts-wrap">
+                <div class="nts-wrap">
                     <input name="sequence-type" type="checkbox"
                         id="sequence-type-lowercase" class="sequence-type-selector"
                         checked="checked"
@@ -38,7 +38,7 @@
                     ><span class="nts-switch"></span>Lowercase</label>
                 </div>
 
-                <div class="sts-wrap">
+                <div class="nts-wrap">
                     <input name="sequence-type" type="checkbox"
                         id="sequence-type-uppercase" class="sequence-type-selector"
                     >
@@ -47,7 +47,7 @@
                     ><span class="nts-switch"></span>Uppercase</label>
                 </div>
 
-                <div class="sts-wrap">
+                <div class="nts-wrap">
                     <input name="sequence-type" type="checkbox"
                         id="sequence-type-numeric" class="sequence-type-selector"
                     >
@@ -56,7 +56,7 @@
                     ><span class="nts-switch"></span>Numeric</label>
                 </div>
 
-                <div class="sts-wrap">
+                <div class="nts-wrap">
                     <input name="sequence-type" type="checkbox"
                         id="sequence-type-special" class="sequence-type-selector"
                     >
